@@ -1,3 +1,8 @@
+Fri Oct 18 13:21:08 1996  Barry Jaspan  <bjaspan@mit.edu>
+
+	* api.2/init-v2.exp: add test 117, for default max_life
+ 	[krb5-admin/18]
+
 Thu Oct 17 16:14:11 1996  Barry Jaspan  <bjaspan@mit.edu>
 
 	* config/unix.exp, lib/lib.t: begin in process of making these
